--- a/Backend/.env
+++ b/Backend/.env
@@ -2,3 +2,4 @@ JWT_SECRET="Aeroma-jay@122732096"
 MONGO_URI="mongodb+srv://aeronitkkrclub:KCK099LaEtiWZJGz@aeromodelling.4uu7urk.mongodb.net/?retryWrites=true&w=majority&appName=AeroModelling"
 USER_EMAIL='hms.nitkkr@gmail.com'
 USER_PASS='akwl ixln nsnx ynir'
+BACKEND_ROUTE='https://51.79.161.11:5000/'
