--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jsqr": "^1.4.0",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "mongodb": "^6.7.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.2",
