--- a/Backend/.env
+++ b/Backend/.env
@@ -2,5 +2,5 @@ JWT_SECRET="Aeroma-jay@122732096"
 MONGO_URI="mongodb+srv://aeronitkkrclub:KCK099LaEtiWZJGz@aeromodelling.4uu7urk.mongodb.net/?retryWrites=true&w=majority&appName=AeroModelling"
 USER_EMAIL='hms.nitkkr@gmail.com'
 USER_PASS='akwl ixln nsnx ynir'
-BACKEND_PROD_ROUTE='http://51.79.146.251:5000'
+BACKEND_PROD_ROUTE='https://aeronitkkr.in'
 NODE_ENVIOR='dev'
