--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-id-swiper": "^4.0.0",
     "react-p5-wrapper": "^4.1.2",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-quill": "^2.0.0",
     "react-slick": "^0.30.2",
     "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.9",
     "three": "^0.163.0"
   },
   "devDependencies": {
