--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.19.2",
     "firebase": "^10.12.3",
     "framer-motion": "^11.2.12",
+    "html5-qrcode": "^2.3.8",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jsqr": "^1.4.0",
