--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-id-swiper": "^4.0.0",
     "react-p5-wrapper": "^4.1.2",
     "react-qr-scanner": "^1.0.0-alpha.11",
-    "react-quill": "^2.0.0",
+    "react-quill": "^0.0.2",
     "react-slick": "^0.30.2",
     "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1",
@@ -52,9 +52,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.2",
+    "eslint-config-next": "^0.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.2.0",
     "typescript": "^5"
   }
 }
