--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
     "@react-three/postprocessing": "^2.16.2",
+    "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
     "browser-image-compression": "^2.0.2",
     "canvas-confetti": "^1.9.3",
@@ -40,7 +41,7 @@
     "react-id-swiper": "^4.0.0",
     "react-p5-wrapper": "^4.1.2",
     "react-qr-scanner": "^1.0.0-alpha.11",
-    "react-quill": "^0.0.2",
+    "react-quill": "^2.0.0",
     "react-slick": "^0.30.2",
     "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1",
@@ -53,8 +54,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "^0.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.2.0",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5"
   }
 }
