--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,6 @@
 JWT_SECRET="Aeroma-jay@122732096"
 MONGO_URI="mongodb+srv://aeronitkkrclub:KCK099LaEtiWZJGz@aeromodelling.4uu7urk.mongodb.net/?retryWrites=true&w=majority&appName=AeroModelling"
-USER_EMAIL='hms.nitkkr@gmail.com'
-USER_PASS='akwl ixln nsnx ynir'
+USER_EMAIL='aeronitkkr.club@gmail.com'
+USER_PASS='bolc kwrb tmex tnhv'
 BACKEND_PROD_ROUTE='https://aeronitkkr.in'
 NODE_ENVIOR='dev'
