--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jsqr": "^1.4.0",
+    "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
     "mongodb": "^6.7.0",
