--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "14.2.2",
     "p5": "^1.9.4",
+    "qrcode.react": "^4.0.1",
     "react": "^18",
     "react-color": "^2.19.3",
     "react-dnd": "^16.0.1",
