Workshop Work Done

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lucide-react": "^0.436.0",
     "mongodb": "^6.7.0",
     "multer": "^1.4.5-lts.1",
-    "next": "14.2.2",
+    "next": "^14.2.13",
     "p5": "^1.9.4",
     "qrcode.react": "^4.0.1",
     "react": "^18",
@@ -44,7 +44,7 @@
     "react-id-swiper": "^4.0.0",
     "react-p5-wrapper": "^4.1.2",
     "react-qr-scanner": "^1.0.0-alpha.11",
-    "react-quill": "^2.0.0",
+    "react-quill": "^0.0.2",
     "react-slick": "^0.30.2",
     "react-webcam": "^7.2.0",
     "sharp": "^0.33.5",
