--- a/Backend/.env
+++ b/Backend/.env
@@ -4,3 +4,8 @@ USER_EMAIL='aeronitkkr.club@gmail.com'
 USER_PASS='bolc kwrb tmex tnhv'
 BACKEND_PROD_ROUTE='https://aeronitkkr.in'
 NODE_ENVIOR='dev'
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
