--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongodb": "^6.7.0",
     "multer": "^1.4.5-lts.1",
     "next": "^14.2.13",
+    "nodemailer": "^6.9.16",
     "p5": "^1.9.4",
     "qrcode.react": "^4.0.1",
     "react": "^18",
