--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
+    "react-font": "^1.2.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-id-swiper": "^4.0.0",
