--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
-    "react-font": "^1.2.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-id-swiper": "^4.0.0",
@@ -52,7 +51,8 @@
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.9",
-    "three": "^0.163.0"
+    "three": "^0.163.0",
+    "upiqr": "^1.3.22"
   },
   "devDependencies": {
     "@types/node": "^20",
