--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "html5-qrcode": "^2.3.8",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "jsqr": "^1.4.0",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
