--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "console-image": "^0.0.0",
     "cookie-parser": "^1.4.6",
     "firebase-admin": "^12.2.0",
+    "googleapis": "^159.0.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "multer": "^1.4.5-lts.1",
